welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	var x = -1
	for (i <- 0 to nums.length-1) {
		if (nums(i)==value){
			if (x!=-1) x=i
		}
	}
	return x	
}
